# TVS-Device-SDK

./: README.md
Android SDK/: README.md
Android SDK/html/: _account_manager_8java.html  _i_atw_listener_8java.html  _i_s_s_errors_8java.html  _i_tr_listener_8java.html  _i_tts_listener_8java.html  _i_tvw_listener_8java.html  _speech_manager_8java.html  _tr_semantic_8java.html  classcom_1_1tencent_1_1ai_1_1account_1_1_a_i_s_d_k_account.html  classcom_1_1tencent_1_1ai_1_1account_1_1_account_manager-members.html  classcom_1_1tencent_1_1ai_1_1account_1_1_account_manager.html  classcom_1_1tencent_1_1ai_1_1sdk_1_1atw_1_1_atw_session.html  classcom_1_1tencent_1_1ai_1_1sdk_1_1control_1_1_speech_manager-members.html  classcom_1_1tencent_1_1ai_1_1sdk_1_1control_1_1_speech_manager.html  classcom_1_1tencent_1_1ai_1_1sdk_1_1tr_1_1_tr_semantic-members.html  classcom_1_1tencent_1_1ai_1_1sdk_1_1tr_1_1_tr_semantic.html  classcom_1_1tencent_1_1ai_1_1sdk_1_1tr_1_1_tr_session-members.html  classcom_1_1tencent_1_1ai_1_1sdk_1_1tr_1_1_tr_session.html  classcom_1_1tencent_1_1ai_1_1sdk_1_1tts_1_1_tts_session.html  classcom_1_1tencent_1_1ai_1_1sdk_1_1tvw_1_1_tvw_session-members.html  classcom_1_1tencent_1_1ai_1_1sdk_1_1tvw_1_1_tvw_session.html  classes.html  deprecated.html  dir_0d4661ae71bc6a06083f8b0f888d8125.html  dir_0f8825a4d6a8db2ef324863084583a0d.html  files.html  (+38 more)
Linux SDK/: CHANGELOG.md  Linux SDK接入说明.md  README.md  Tencent SDK API Manual.html
Linux SDK/samples/sample_voice/: CMakeLists.txt  testvoice.cpp
docs/: index.html
iOS SDK/: README.md
语义服务数据文档/: V3服务数据协议规范(对外版).md
(+634 files in other folders)
